--- a/examples/train_and_test_with_ppo.ipynb
+++ b/examples/train_and_test_with_ppo.ipynb
@@ -9,9 +9,10 @@
     "\n",
     "import gym\n",
     "import numpy as np\n",
+    "%pip install rl_visualizer\n",
     "from rl_visualizer import RLVisualizer\n",
-    "!pip install stable_baselines3\n",
-    "!pip install \"gym[box2d]\" \n",
+    "%pip install stable_baselines3\n",
+    "%pip install \"gym[box2d]\" \n",
     "from stable_baselines3 import PPO\n",
     "\n",
     "def train_and_visualize(env_name=\"LunarLander-v2\", total_timesteps=1000, visualize=True):\n",
